--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #github login
 
-spring.security.oauth2.client.registration.github.client-id=0349d9ce165171d1308a
-spring.security.oauth2.client.registration.github.client-secret=e0948f5b8bd5ed2546688194f3b468ff3c3c6e70
+spring.security.oauth2.client.registration.github.client-id=***************
+spring.security.oauth2.client.registration.github.client-secret=*****************
 
 logging.level.org.springframework.security=TRACE
-
